# synthtest

./: CHANGELOG.md  LICENSE  README.md  stack.yaml  synthtest.cabal  tmp
src/: Lib.hs  State.hs  Utils.hs
src/Tests/: failing.hs  ghci.conf  simple.hs  working.hs
