name:                synthtest
version:             0.1.0.0
description:         test synth
homepage:            https://github.com/o1lo01ol1o/synthtest
bug-reports:         https://github.com/o1lo01ol1o/synthtest/issues
license:             MIT
license-file:        LICENSE
author:              none
maintainer:          tim.pierson@gmail.com
copyright:           2017 none
category:            TEsting
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.20
tested-with:         GHC == 8.2.1

library
  hs-source-dirs:      src
  exposed-modules:     Lib, Utils
  ghc-options:         -Wall -O3
  build-depends:       base >= 3 && < 5,
                arrows >= 0.4,
                array,
                deepseq,
                random,
                PortMidi,
                HCodecs >= 0.2,
                stm,
                containers,
                bytestring,
                heap >= 1.0,
                midi,
                jack,
                storablevector,
                  vector,
                event-list,
                transformers,
                explicit-exception,
                non-negative,
                accelerate,
                       accelerate-llvm,
                        accelerate-llvm-native,
                accelerate-io

  default-language:    Haskell2010

source-repository head
  type:                git
  location:            https://github.com/o1lo01ol1o/synthtest.git
